tests/expected_output/expected_in_for_statement_specifier/000000-clang-14.0-x86_64-pc-linux-gnu.txt
expected_in_for_statement_specifier.c:2:28: error: expected ';' in 'for' statement specifier
    for (int i = 0; i < 10 i++) {
                           ^
dcc explanation: the three parts of a ';' statment should be separated with ';'
